backport: re PR debug/92664 (Wrong .debug_line section information when compiling stdin input with -g3)

Backported from mainline
	2019-11-27  Jakub Jelinek  <jakub@redhat.com>

	PR debug/92664
	* dwarf2out.c (lookup_filename): Use "<stdin>" instead of "".